syntax = "proto3";

option csharp_namespace = "GrpcSatelliteLinux";

import "google/protobuf/empty.proto";

package DeploymentServicesClient;

service Deployment {
  rpc IsReady (google.protobuf.Empty) returns (IsReadyResponse);

  rpc BeginPublication(BeginPublicationRequest) returns (DeploymentServiceBasicResponse);

  rpc ExecuteNextOperation(google.protobuf.Empty) returns (DeploymentServiceBasicResponse);

  rpc Complete(google.protobuf.Empty) returns (DeploymentServiceBasicResponse);

  rpc UploadPackageBuffer(stream UploadPackageBufferRequest) returns (google.protobuf.Empty);

  rpc ResetPackage(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc DeployContainer(DeployContainerRequest) returns (google.protobuf.Empty);

  rpc ProcessConfigFile(ProcessConfigFileRequest) returns (google.protobuf.Empty);

  rpc RunPowerShellScript(RunPowerShellScriptRequest) returns (google.protobuf.Empty);

  rpc CopyFiles(CopyFilesRequest) returns (google.protobuf.Empty);

  rpc RunSQLScripts(RunSQLScriptsRequest) returns (google.protobuf.Empty);

  rpc Rollback(google.protobuf.Empty) returns (google.protobuf.Empty);

  rpc GetLastException(google.protobuf.Empty) returns (GetLastExceptionResponse);
}

service Information {
  rpc GetVersion (google.protobuf.Empty) returns (InformationVersionResponse);
}

service Monitoring {
  rpc GetServerSummary (google.protobuf.Empty) returns (ServerSummaryResponse);
}

message IsReadyResponse{
	bool isReady = 1;
}

message DeploymentServiceBasicResponse{
	bool isSuccess = 1;
}

message BeginPublicationRequest{
	int32 publicationId = 1;
}

message UploadPackageBufferRequest{
	bytes buffer = 1;
}

message DeployContainerRequest{
	string containerName = 1;
	int32 projectId = 2;
	string ports = 3;
	string environmentVariables = 4;
	string labels = 5;
	string volumes = 6;
	string restartPolicy = 7;
	string networks = 8;
}

message ProcessConfigFileRequest{
	string file = 1;
	string content = 2;
}

message RunPowerShellScriptRequest{
	string script = 1;
	string workingDirectory = 2;
}

message CopyFilesRequest{
	string destination = 1;
	int32 projectId = 2;
	string mode = 3;
}

message RunSQLScriptsRequest{
	string connectionString = 1;
	string command = 2;
}

message ExceptionDataInfo{
	string name = 1;
	string value = 2;
	bool isProperty = 3;
}

message GetLastExceptionResponse{
	string typeName = 1;
	string assemblyQualifiedTypeName = 2;
	string message = 3;
	string source = 4;
	string stackTrace = 5;
	repeated ExceptionDataInfo exceptionData= 6;
	GetLastExceptionResponse innerException = 7;
}

message InformationVersionResponse{
	int32 version = 1;
}

message DriveInfoResponse{
	string name = 1;
	string label = 2;
	double totalSpaceMb = 3;
	double freeSpaceMb = 4;
}

message ServerUpdateInfoResponse{
	string title = 1;
	string description = 2;
	string releaseDate = 3;
	bool isMandatory = 4;
	bool isDownloaded = 5;
}

message ServerSummaryResponse{
	repeated DriveInfoResponse drives = 1;
	repeated ServerUpdateInfoResponse updates = 2;
	double availableMemoryMb = 3;
	double totalMemoryMb = 4;
}
